--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && cp -r public .next/standalone/public && cp -r .next/static .next/standalone/.next/static",
+    "build": "next build && cp -r public .next/standalone/goldenkey-fortune-2026/public && cp -r .next/static .next/standalone/goldenkey-fortune-2026/.next/static",
     "start": "node server.js",
     "lint": "eslint"
   },
